# gw_firmware

./: CMakeLists.txt  README.md
app/devManager/: CMakeLists.txt  common.h  devManager.c  event_process.c  gpio_control.c  gpio_control.h  i2c_control.c  i2c_control.h  led.c  led.h  monitor.c  monitor.h  parse_helper.c  parse_mon.c  parse_mon.h  power.c  power.h  reg_control.c  reg_control.h  rf_module.c  rf_module.h  rsdk_monitor.c  rsdk_monitor.h  spi_control.c  spi_control.h  timer.h
app/initdev/: CMakeLists.txt  common.h  event_process.c  event_process.h  initdev.c  parse_helper.c  parse_helper.h  parse_mon.c  parse_mon.h  timer.c
include/: core.h  gpio_define.h
src/: cmd_line.c  read_file.c  small_func.c  small_func.h  str2digit.c
src/gpio/: gpio_dev.c  gpio_dev.h  gpio_ops.c  gpio_ops.h
tmp/: test.c
